--- a/worker/wrangler.jsonc
+++ b/worker/wrangler.jsonc
@@ -31,9 +31,12 @@
   // "ai": {
   //   "binding": "AI"
   // },
-  // "observability": {
-  //   "enabled": true,
-  //   "head_sampling_rate": 1
-  // }
-  
+  "env": {
+    "production": {
+      "observability": {
+        "enabled": true,
+        "head_sampling_rate": 1
+      }
+    }
+  }  
 }
