--- a/worker/package.json
+++ b/worker/package.json
@@ -11,6 +11,7 @@
     "hono": "^4.9.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "typescript": "^5.9.2",
     "wrangler": "^4.4.0"
   }
