Enhance worker configuration and analytics integration
- Updated biome.json to include .tsx, .js, and .jsx file types for inclusion.
- Modified tsconfig.json to set baseUrl and define paths for helper imports.
- Added analytics endpoint variable to wrangler.jsonc and updated compatibility date.
- Expanded helper.ts with new functions for SHA-256 hashing, environment variable normalization, device type detection, and bot detection.
- Enhanced index.ts to integrate analytics event tracking on cache hits and misses, utilizing Redis for enriched data.

--- a/worker/biome.json
+++ b/worker/biome.json
@@ -3,12 +3,15 @@
 	"vcs": {
 		"enabled": false,
 		"clientKind": "git",
-		"useIgnoreFile": false
+		"useIgnoreFile": true
 	},
 	"files": {
 		"ignoreUnknown": false,
 		"includes": [
-			"src/**/*.ts"
+			"src/**/*.ts",
+			"src/**/*.tsx",
+			"src/**/*.js",
+			"src/**/*.jsx"
 		]
 	},
 	"formatter": {
