--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -13,6 +13,12 @@
       "./worker-configuration.d.ts"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@helper": [
+        "src/helper.ts"
+      ]
+    }
   },
 }
