--- a/worker/wrangler.jsonc
+++ b/worker/wrangler.jsonc
@@ -1,8 +1,11 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "ndleworker",
+  "vars": {
+    "ANALYTICS_ENDPOINT": "https://api.us-west-2.aws.tinybird.co/v0/events?name=link_clicks"
+  },
   "main": "src/index.ts",
-  "compatibility_date": "2025-09-13",
+  "compatibility_date": "2025-09-15",
   "workers_dev": false,
   "routes": [
     {
@@ -14,34 +17,6 @@
       "zone_name": "ndle.im"
     }
   ],
-  // "compatibility_flags": [
-  //   "nodejs_compat"
-  // ],
-  // "vars": {
-  //   "MY_VAR": "my-variable"
-  // },
-  // "kv_namespaces": [
-  //   {
-  //     "binding": "MY_KV_NAMESPACE",
-  //     "id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-  //   }
-  // ],
-  // "r2_buckets": [
-  //   {
-  //     "binding": "MY_BUCKET",
-  //     "bucket_name": "my-bucket"
-  //   }
-  // ],
-  // "d1_databases": [
-  //   {
-  //     "binding": "MY_DB",
-  //     "database_name": "my-database",
-  //     "database_id": ""
-  //   }
-  // ],
-  // "ai": {
-  //   "binding": "AI"
-  // },
   "observability": {
     "enabled": true,
     "head_sampling_rate": 1
